chore: :pencil2: minor ui changes

--- a/src/app/components/task-panel/task-panel.component.html
+++ b/src/app/components/task-panel/task-panel.component.html
@@ -29,5 +29,5 @@
     </div>
   </div>
   <div class="task-skip" (click)="taskSkipped.emit()">Move</div>
-  <div class="task-complete" (click)="taskCompleted.emit()">Complete</div>
+  <div class="task-complete" (click)="completePrompt()">Complete</div>
 </div>
