--- a/src/app/settings-menu/settings-menu.component.html
+++ b/src/app/settings-menu/settings-menu.component.html
@@ -36,7 +36,7 @@
       <h4>Sort Mode for due tasks</h4>
       Sort first by...
       <select [(ngModel)]="options.dueTasksSortMode">
-        <option [value]="dueSortMode.DueDuration">Duration</option>
+        <option [value]="dueSortMode.DueDuration">Due Duration</option>
         <option [value]="dueSortMode.Category">Category</option>
       </select>
     </div>
