feat: :sparkles: implement history and undo functionality

--- a/src/app/level/level.component.html
+++ b/src/app/level/level.component.html
@@ -1,7 +1,8 @@
+<h3>Level</h3>
+
 <div>
   Level: {{ levelProgress.level }} XP: {{ levelProgress.xp }} / {{ neededXP }}
 </div>
 
-<div>
-  <button>View History</button>
-</div>
+<h3>History</h3>
+<app-history></app-history>
