--- a/src/app/components/timeline/timeline.component.html
+++ b/src/app/components/timeline/timeline.component.html
@@ -4,6 +4,8 @@
   {{ moonPhaseAlt() }}
 </h5>
 
+<button (click)="undoAction()">Undo</button>
+
 <div *ngIf="dueTasks.length > 0" class="day-container dueDay">
   <div *ngFor="let task of dueTasks" class="task-container">
     <app-task-panel
