refactor: :recycle: big refactor: make Task be a class instead of interface and more
convert Data from localStorage into a class (might be slow), make nextDueDate private, adjust code

--- a/src/app/edit-list/edit-list.component.html
+++ b/src/app/edit-list/edit-list.component.html
@@ -18,7 +18,7 @@
     >
       <div class="task-title-text" [innerHTML]="task.title"></div>
       <div class="task-last-post">
-        Next due: {{ task.nextDueDate | date : "dd.MM.yyyy" }}
+        Next due: {{ task.getDisplayDueDate() | date : "dd.MM.yyyy" }}
       </div>
     </div>
     <button class="task-delete-btn" (click)="deleteTask(task)">Delete</button>
