--- a/src/app/editor/editor.component.html
+++ b/src/app/editor/editor.component.html
@@ -24,7 +24,7 @@
   <div>
     <h4 *ngIf="createNew">First due date</h4>
     <h4 *ngIf="!createNew">Next due date</h4>
-    <input type="date" [(ngModel)]="task.nextDueDate" />
+    <input type="date" [(ngModel)]="date" />
   </div>
 
   <div>
