--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,6 +1,6 @@
 <div class="navigator">
-  <button (click)="redirect('/home')">Home/Main</button>
+  <button (click)="redirect('/home')">Home</button>
   <button (click)="redirect('/edit')">Edit Data</button>
-  <button (click)="redirect('/level')">Level</button>
+  <button (click)="redirect('/level')">Level/History</button>
   <button (click)="redirect('/settings')">Settings</button>
 </div>
