fix: :bug: fix what history saves & minor UI adjustments

--- a/src/app/components/timeline/timeline.component.html
+++ b/src/app/components/timeline/timeline.component.html
@@ -88,3 +88,5 @@
     ><button (click)="skipTask(skipDialogTask)">Confirm and Move</button>
   </div>
 </p-dialog>
+
+<div class="siteFooter"></div>
