--- a/src/app/components/timeline/timeline.component.scss
+++ b/src/app/components/timeline/timeline.component.scss
@@ -2,7 +2,7 @@
 }
 
 .notDueYet {
-  color: gray;
+  color: rgb(36, 36, 36);
 }
 
 .seperator {
@@ -22,7 +22,7 @@
 }
 
 .readable {
-  background-color: #1d3d97;
+  // background-color: #1d3d97;
 }
 
 .freezeBtn {
