feat: :sparkles: add Background Feature, make History exportable, minor UI adjustments

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,5 @@
-<div class="bg">
+<div [ngClass]="getDivClass()">
+  <img [ngClass]="getImgClass()" [src]="backgroundImg" />
   <button (click)="redirectToEditor()">Add Task</button>
   <button (click)="popupMiniTasks()">Add Unregular Tasks</button>
 
