--- a/src/app/components/timeline/timeline.component.scss
+++ b/src/app/components/timeline/timeline.component.scss
@@ -32,3 +32,8 @@
 .siteFooter {
   padding-top: 4rem;
 }
+
+.outlinedText {
+  text-shadow: 0 0 1px black, 0 0 1px black, 0 0 1px black, 0 0 1px black;
+  color: white;
+}
