--- a/src/app/components/timeline/timeline.component.scss
+++ b/src/app/components/timeline/timeline.component.scss
@@ -37,3 +37,7 @@
   text-shadow: 0 0 1px black, 0 0 1px black, 0 0 1px black, 0 0 1px black;
   color: white;
 }
+
+.warningText {
+  color: rgb(255, 166, 0);
+}
