--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -29,3 +29,14 @@
   top: 0;
   z-index: -1;
 }
+
+.overlay {
+  opacity: 0.5;
+  background: #000;
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+  top: 0;
+  left: 0;
+  position: fixed;
+}
